crates/biome_cli/tests/snapshots/main_cases_format_with_errors/format_format_with_errors_true.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --format-with-errors=true file.js
```

## `file.js`

```js
let a = {
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:1:10 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `}` but instead the file ends
  
  > 1 │ let a = {
      │          
  
  i the file ends here
  
  > 1 │ let a = {
      │          
  

```

```block
file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - let·a·=·{
      1 │ + let·a·=·{
      2 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
